--- a/fe/index.html
+++ b/fe/index.html
@@ -3,7 +3,17 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Updated favicon links -->
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png">
+    <link rel="icon" type="image/png" sizes="64x64" href="/favicon-64x64.png">
+    <link rel="icon" type="image/png" sizes="128x128" href="/favicon-128x128.png">
+    <link rel="icon" type="image/png" sizes="180x180" href="/favicon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192x192.png">
+    <link rel="icon" type="image/png" sizes="256x256" href="/favicon-256x256.png">
+    <link rel="icon" type="image/png" sizes="384x384" href="/favicon-384x384.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/favicon-512x512.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pulse - Digital Record of Humanity</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
